[Kevin]: Setting image with zoom level of 115 perc and shifting 30 px to left, to fix issue of image leaving some padding to left

--- a/src/app/rooms/rooms.component.css
+++ b/src/app/rooms/rooms.component.css
@@ -28,7 +28,11 @@
 .room-img img {
     width:100%;
     height: 100%;
-    margin-left: -35px;
+}
+
+.zoom_115 {
+    width:115%;
+    margin-left: -30px;
 }
 
 .frame {
